--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.4.1",
+		"tw-colors": "^1.2.5",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
