--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-heros": "^3.1.0",
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.4.1",
 		"tw-colors": "^1.2.5",
